- disabled the MySQL importer
- a new table was added to the database to keep information about the database,
right now it just hold the version of the database and the datetime it was 
created
- will give a warning if trying to connect to a database with different 
major and minor numbers than the software
- will not connect to a database that doesn't have a 'bauble' table in the
database

2005.11.13
---------
- fixed adding donors from the donation editor


2005.11.12
---------
- searchview parser now uses pyparser and can now handle more complex queries
though some work still needs to be done

2005.11.5
----------
- lots of fixes related to the Donor table and DonorEditor

2005.11.3
----------
- fixed completion bug so that the selected value is inserted into the proper 
row

2005.11.2
----------
- editors should be fixed for the most part but i'm sure they still need some
polish
- invoking an editor inside an editor to edit a single join work now
- editors now set sqlhub.processConnection to the editors transaction so that
all operations that happend while something is being edited can be rolled 
backed, this doesn't seem to cause any problems and is the best way to keep 
from getting straggling data such as collection data not associated with 
an accession
- need alot of API cleanup
- commited r114
- remove TableEditorDialog, i don't think its really a useful abstraction
- alot of code cleanup and removing debugging code and old irrelevant stuff
- committed r115
- just before i committed i noticed that there's a problem with editing
multiple values in a treevieweditor dialog with completion, it seems that
only the first row gets set no matter which row is being edited
- there also seem to be a problem with the accession editor that causes it to
randomly crash, usually when entering the species name



2005.11.1
----------
- editors now take keyword argument connection

2005.10.29
----------